# becca-bootloader

./: .editorconfig  Makefile  README.md  meson.build
code/bootloader/: meson.build
code/bootloader/source/: main.cc
code/core-library/: meson.build
code/core-library/include/becca/: alloc.hh  asm.hh  hooks.hh  string.hh  types.hh
code/core-library/source/: asm.cc  chkstk.S  hooks.cc  string.cc
code/uefi-driver/: meson.build
code/uefi-driver/source/: main.cc
code/uefi-library/: meson.build
code/uefi-library/include/becca/: efi.hh
code/uefi-library/include/becca/efi/: alloc.hh  fs.hh  system.hh  terminal.hh  types.hh
code/uefi-library/include/becca/efi/protocol/: DevicePath.hh  File.hh  LoadedImage.hh  SimpleFileSystem.hh  SimpleTextInput.hh  SimpleTextOutput.hh
code/uefi-library/source/: alloc.cc  fs.cc  terminal.cc
crossfiles/: x86_64-uefi-windows.ini
mk/: build.mk  dist.mk  qemu.mk
